// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigTestCases records issue-2991 exported tests should write relative paths to records 1`] = `
"{
  \\"chunks\\": {
    \\"byName\\": {
      \\"main\\": 0
    },
    \\"bySource\\": {
    },
    \\"usedIds\\": [
      0
    ]
  },
  \\"modules\\": {
    \\"byIdentifier\\": {
      \\"external \\\\\\"fs\\\\\\"\\": 188,
      \\"external \\\\\\"path\\\\\\"\\": 158,
      \\"ignored  pkgs/somepackage/foo\\": 569,
      \\"test.js\\": 316
    },
    \\"usedIds\\": [
      158,
      188,
      316,
      569
    ]
  }
}"
`;

exports[`ConfigTestCases records issue-7339 exported tests should write relative dynamic-require paths to records 1`] = `
"{
  \\"chunks\\": {
    \\"byName\\": {
      \\"main\\": 0
    },
    \\"bySource\\": {
    },
    \\"usedIds\\": [
      0
    ]
  },
  \\"modules\\": {
    \\"byIdentifier\\": {
      \\"dependencies sync /^\\\\\\\\.\\\\\\\\/.*$/\\": 913,
      \\"dependencies/bar.js\\": 853,
      \\"dependencies/foo.js\\": 494,
      \\"external \\\\\\"fs\\\\\\"\\": 188,
      \\"external \\\\\\"path\\\\\\"\\": 158,
      \\"test.js\\": 316
    },
    \\"usedIds\\": [
      158,
      188,
      316,
      494,
      853,
      913
    ]
  }
}"
`;
